--- a/style.css
+++ b/style.css
@@ -537,11 +537,40 @@ html, body {
 	font-family:'Open Sans';
 }
 
-#settings {
+#problem {
 	left:65vw;
 	top:50vh;
 	width:calc(35vw - 20px);
-	height:calc(50vh - 20px);
+	height:calc(15vh - 20px);
+}
+
+#problem h1 {
+	float:left;
+	padding:10px;
+	width:calc(100% - 20px);
+	height:calc(5vh - 20px);
+	font-family:'Open Sans';
+	color:var(--primary-text-color);
+}
+
+#problem textarea {
+	float:left;
+	padding:10px;
+	width:calc(100% - 20px);
+	height:calc(10vh - 20px);
+	resize:none;
+	font-family:'Open Sans';
+	font-size:100%;
+	background:var(--primary-accent);
+	color:var(--primary-text-color);
+	overflow-y:scroll;
+}
+
+#settings {
+	left:65vw;
+	top:65vh;
+	width:calc(35vw - 20px);
+	height:calc(35vh - 20px);
 }
 
 #settings div {
