--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ textarea::placeholder {
 	width:calc(100% - 10px);
 	height:calc(10% - 10px);
 	background:var(--primary-accent);
+	color:var(--primary-text-color);
 	font-family:'Open Sans';
 	font-size:20%;
 	color:white;
@@ -243,6 +244,7 @@ textarea::placeholder {
 	width:calc(100% - 10px);
 	height:calc(10% - 10px);
 	background:var(--secondary-accent-1);
+	color:var(--primary-text-color);
 	font-family:'Open Sans';
 	font-size:20%;
 	color:white;
@@ -271,15 +273,15 @@ textarea::placeholder {
 #blueprints div.blueprint {
 	float:left;
 	margin:5px;
-	width:calc(33.33% - 10px);
-	height:calc(30% - 10px);
+	width:calc(100% - 10px);
+	height:calc(85% - 10px);
 	background:var(--secondary-accent-1);
 }
 
 #blueprints div.blueprint h1 {
 	float:left;
 	width:calc(90% - 5px);
-	height:25%;
+	height:5%;
 	color:var(--primary-text-color);
 	font-family:'Open Sans';
 	font-size:50%;
@@ -289,27 +291,131 @@ textarea::placeholder {
 #blueprints div.blueprint button {
 	float:left;
 	width:calc(10% - 5px);
-	height:25%;
+	height:5%;
 	background:var(--secondary-accent-2);
 	color:var(--primary-text-color);
 	font-family:'Open Sans';
 	font-size:25%;
 }
 
-#blueprints div.blueprint canvas {
+#blueprints div.blueprint div {
 	float:left;
 	width:100%;
-	height:75%;
+	height:95%;
 }
 
-#blueprints.selected div.blueprint h1 {
-	font-size:125%;
-	height:15%;
+#blueprints div.blueprint div textarea {
+	float:left;
+	padding:10px 10px;
+	width:calc(100% - 20px);
+	height:calc(10% - 20px);
+	font-family:'Open Sans';
+	font-size:115%;
+	background:var(--primary-accent);
+	color:var(--primary-text-color);
+	filter:brightness(105%);
 }
 
-#blueprints.selected div.blueprint button {
+#blueprints div.blueprint div div {
+	float:left;
+	margin:10px 0;
+	width:calc(50% - 5px);
+	height:calc(90% - 20px);
+	background:var(--primary-accent);
+}
+
+#blueprints div.blueprint div div.left {
+	margin-right:5px;
+}
+
+#blueprints div.blueprint div div.right {
+	margin-left:5px;
+}
+
+#blueprints div.blueprint div div h1 {
+	float:left;
+	padding:0px 10px;
+	width:calc(100% - 20px);
+	height:5%;
+	font-size:100%;
+}
+
+#blueprints div.blueprint div div canvas {
+	float:left;
+	margin:10px 0px;
+	width:100%;
+	height:calc(95% - 20px);
+}
+
+#blueprints div.blueprint div div ul {
+	float:left;
+	width:100%;
+	height:85%;
+}
+
+#blueprints div.blueprint div div ul li {
+	float:left;
+	width:100%;
+	height:25%;
+}
+
+#blueprints div.blueprint div div ul li textarea {
+	float:left;
+	margin:0;
+	padding:10px;
+	width:calc(45% - 35px);
+	height:calc(100% - 20px);
+	background:var(--tertiary-accent);
+	font-family:'Open Sans';
+	color:black;
+}
+
+#blueprints div.blueprint div div ul li textarea::placeholder {
+	color:darkgrey;
+}
+
+#blueprints div.blueprint div div ul li button {
+	float:left;
+	margin-right:10px;
+	width:calc(10% - 10px);
+	height:100%;
+	font-family:'Open Sans';
+	font-size:200%;
+}
+
+#blueprints div.blueprint div div button {
+	float:left;
+	margin:0;
+	padding:10px;
+	width:calc(100% - 20px);
+	height:calc(10% - 20px);
+	background:var(--tertiary-accent);
+	color:black;
+	transition:all .5s;
+}
+
+#blueprints div.blueprint div div button:hover {
+	opacity:.8;
+}
+
+#blueprints div.blueprint div div ul li textarea.left {
+	margin-left:10px;
+	margin-right:5px;
+}
+
+#blueprints div.blueprint div div ul li textarea.right {
+	margin-left:5px;
+	margin-right:10px;
+}
+
+#blueprints.selected div.blueprint>h1 {
 	font-size:125%;
-	height:15%;
+	height:5%;
+}
+
+#blueprints.selected div.blueprint>button {
+	font-size:125%;
+	height:5%;
 }
 
 #name {
