--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ textarea::placeholder {
 	margin:5px;
 	border-radius:5px;
 	width:calc(50% - 10px);
-	height:calc(20% - 10px);
+	height:calc(40% - 10px);
 	background:var(--primary-accent-3);
 	color:var(--primary-text-color);
 	font-family:'Open Sans';
@@ -527,6 +527,7 @@ textarea::placeholder {
 
 #resources-assessment div ul li div {
 	background:var(--primary-accent-4);
+	overflow-x:scroll;
 }
 
 #resources-assessment div ul li button {
@@ -631,20 +632,59 @@ textarea::placeholder {
 	font-family:'Open Sans';
 	background:var(--tertiary-accent);
 	color:black;
-	padding-top:5px;
 	padding-left:10px;
 	width:35vw;
 	height:5vh;
 }
 
-#articles p {
+#articles div {
+	width:calc(35vw - 20px);
+	height:45vh;
+	overflow-y:scroll;
+}
+
+#articles div.article {
 	float:left;
-	padding:10px;
-	width:calc(35vw - 40px);
-	height:calc(40vh - 40px);
+	margin:10px 20px;
+	width:calc(100% - 40px);
+	height:calc(15% - 20px);
+	background:var(--primary-text-color);
+	border-radius:5px;
+	transition:all .5s;
+}
+
+#articles div.article h1 {
+	float:left;
+	width:100%;
+	height:100%;
 	font-family:'Open Sans';
 	background:inherit;
 	filter:brightness(115%);
+	transition:all .5s;
+}
+
+#articles div.article p {
+	float:left;
+	margin:0px 10px;
+	width:calc(100% - 20px);
+	height:0;
+	font-family:'Open Sans';
+	background:inherit;
+	filter:brightness(115%);
+	transition:all .5s;
+	overflow-y:scroll;
+}
+
+#articles div.article.active {
+	height:calc(60% - 40px);
+}
+
+#articles div.article.active h1 {
+	height:20%;
+}
+
+#articles div.article.active p {
+	height:80%;
 }
 
 #problem {
