--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html, body {
 	overflow-y:scroll;
 }
 
-textarea::placeholder {
+textarea::placeholder, input::placeholder {
 	color:inherit;
 	filter:brightness(75%);
 	/* TODO: this */
@@ -49,6 +49,70 @@ textarea::placeholder {
 .screen.active {
 	visibility:visible;
 	width:100%;
+}
+
+#signin textarea, #signin input, #signin button {
+	float:left;
+	margin:50px 100px;
+	width:calc(100% - 200px);
+	height:calc(calc(100% / 3) - 100px);
+	background:var(--primary-accent);
+	color:var(--primary-text-color);
+	border-radius:10px;
+	text-align:center;
+	line-height:calc(calc(100vh / 3) - 100px);
+	font-family:'Open Sans';
+	font-size:250%;
+	transition:all .5s;
+}
+
+#signin button:hover {
+	background:var(--primary-accent-2);
+}
+
+#projects h1 {
+	float:left;
+	width:100%;
+	height:10%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	font-family:'Open Sans';
+	font-size:200%;
+}
+
+#projects ul {
+	float:left;
+	width:100%;
+	height:90%;
+	list-style-type:none;
+	overflow-y:scroll;
+}
+
+#projects ul li.project {
+	float:left;
+	margin:10px;
+	width:calc(100% - 20px);
+	height:calc(10% - 20px);
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	font-family:'Open Sans';
+	font-size:200%;
+	background:var(--primary-accent);
+	border-radius:10px;
+	color:var(--primary-text-color);
+	transition:all .5s;
+	cursor:default;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	-o-user-select:none;
+	user-select:none;
+}
+
+#projects ul li.project:hover {
+	background:var(--primary-accent-2);
 }
 
 #about h1 {
@@ -401,11 +465,13 @@ textarea::placeholder {
 #blueprints div.blueprint div div ul li textarea.left {
 	margin-left:10px;
 	margin-right:5px;
+	overflow-y:scroll;
 }
 
 #blueprints div.blueprint div div ul li textarea.right {
 	margin-left:5px;
 	margin-right:10px;
+	overflow-y:scroll;
 }
 
 #blueprints.selected div.blueprint>h1 {
